Removed collapsing nav bar due to bootstrap incompatability issues. All features operational.

--- a/SuperherosProject/Content/sandstone.css
+++ b/SuperherosProject/Content/sandstone.css
@@ -3235,7 +3235,11 @@ input[type="button"].btn-block {
 }
 
 .collapse:not(.show) {
-  display: none;
+    display: none;
+}
+
+.collapse.show {
+    visibility: visible;
 }
 
 .collapsing {
